# myjdownloader-extension-mv3

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  background.js  jest.config.js  jest.setup.js  loginNeeded.html  magilla-build-test.ps1  manifest.json  manifest.json.backup  offscreen.html  offscreen.js  options.html  options.js  package.json  popup.html  toolbar.html
.github/workflows/: build-release.yml  ci.yml  release.yml  security.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
captcha-helper/: Cargo.toml  README.md  SECURITY.md  install.ps1  myjd-native-host.json  run-tests.ps1  test-native-messaging.html  test-native-messaging.js
captcha-helper/src/: captcha.rs  lib.rs  main.rs  native.rs  validation.rs  webview.rs
captcha-helper/tests/: integration_test.rs
contentscripts/: browserSolverEnhancer.js  captchaSolverContentscript.js  cnlInterceptor.js  myjdCaptchaSolver.js  onCopyContentscript.js  rc2Contentscript.js  webinterfaceEnhancer.js
partials/: templateCache.js
scripts/: app.js  popup-app.js  popup.js  toolbar.js  toolbarApi.js
scripts/__tests__/: AddLinksController.test.js  background.test.js  options.test.js  templateCache.test.js
scripts/controllers/: AddLinksController.js  BackgroundController.js  ConnectedController.js  PopupController.js  (+3 more)
styles/: main.css
(+102 files in other folders)
